force-app/main/default/objects/Membership__c/fields/MC_PH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_PH_Sync_Eligibility__c</fullName>
    <formula>Contact__c != null &amp;&amp; Contact__r.MC_PH_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC PH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>