force-app/main/default/objects/Membership__c/fields/Member_Tier__c.field-meta.xml
<CustomField>
    <fullName>Member_Tier__c</fullName>
    <label>Member Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>