force-app/main/default/objects/Membership__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tangent</fullName>
                <default>true</default>
                <label>Tangent</label>
            </value>
            <value>
                <fullName>Capillary</fullName>
            </value>
            <value>
                <fullName>AbbottMall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>