force-app/main/default/objects/Membership__c/fields/MembershipExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>MembershipExpiryDate__c</fullName>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>