force-app/main/default/objects/Membership__c/fields/MembershipId__c.field-meta.xml
<CustomField>
    <fullName>MembershipId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Membership ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>