force-app/main/default/objects/Membership__c/fields/MembershipStartDate__c.field-meta.xml
<CustomField>
    <fullName>MembershipStartDate__c</fullName>
    <label>Membership Start Date</label>
    <type>Date</type>
</CustomField>