force-app/main/default/objects/Membership__c/fields/NumberOfDaysDormant__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDaysDormant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Days Dormant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>