force-app/main/default/objects/Membership__c/fields/NumberOfTransactions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTransactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>