force-app/main/default/objects/Membership__c/fields/Recent_Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Recent_Product_Purchased__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recent Product Purchased</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>