force-app/main/default/objects/Membership__c/fields/Total_Reward__c.field-meta.xml
<CustomField>
    <fullName>Total_Reward__c</fullName>
    <label>Total Reward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>